--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -34,3 +34,17 @@ services:
       - 80:80
     depends_on:
       - users
+      - client
+
+  client:
+    container_name: client
+    build:
+     context: ./services/client
+     dockerfile: Dockerfile-prod
+     args:
+      - NODE_ENV=production
+      - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+    ports:
+      - '3007:80'
+    depends_on:
+      - users
