--- a/services/users/Dockerfile-dev
+++ b/services/users/Dockerfile-dev
@@ -1,12 +1,11 @@
 # image base
-FROM python:3.7.2-alpine
+FROM python:3.7.2-slim
 
 # nuevo
 # instalando dependencias
-RUN apk update && \
-    apk add --virtual build-deps gcc python-dev musl-dev && \
-    apk add postgresql-dev && \
-    apk add netcat-openbsd
+RUN apt-get update && \
+    apt-get -y install netcat && \
+    apt-get clean
 
 # establecido directorio de trabajo
 WORKDIR /usr/src/app
